[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version =  "0.5.0-rc.2", features = ["json"] } 
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.66"
env_logger = "0.9.0"
futures = "0.3"

near-jsonrpc-client = { version = "0.3.0", features = ["any"] }
near-jsonrpc-primitives = "0.12.0"
near-primitives = "0.12.0"

redis = { version = "0.21.5", features = ["tls"] }
derive-redis-json = "0.1.1"

mongodb = "2.2.0"
